--- a/index.html
+++ b/index.html
@@ -383,13 +383,17 @@
         }
 
         #repairLabel,
-        #flatLabel,
         #repairButtons {
             display: none;
         }
 
         #baindLabel,
         #baindButtons {
+            display: none;
+        }
+
+        #flatLabel,
+        #flatButtons {
             display: none;
         }
 
@@ -952,26 +956,26 @@
 
             <label id="flatLabel"></label>
             <div id="flatButtons" class="irradiations">
-                <button type="button" id="itiirradiations" onclick="selectirradiations(this)">80本 (60分)</button>
-                <button type="button" id="tniiirradiations" onclick="selectirradiations(this)">100本 (60分)</button>
-                <button type="button" id="saaniirradiations" onclick="selectirradiations(this)">120本 (90分)</button>
-                <button type="button" id="siiirradiations" onclick="selectirradiations(this)">付け放題 (90分)</button>
+                <button type="button" id="itiirradiations" onclick="selectirradiations(this)">フラット80本 (60分)</button>
+                <button type="button" id="tniiirradiations" onclick="selectirradiations(this)">フラット100本 (60分)</button>
+                <button type="button" id="saaniirradiations" onclick="selectirradiations(this)">フラット120本 (90分)</button>
+                <button type="button" id="siiirradiations" onclick="selectirradiations(this)">フラット付け放題 (90分)</button>
             </div>
 
             <label id="repairLabel"></label>
             <div id="repairButtons" class="irradiations">
-                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)">80本 (60分)</button>
-                <button type="button" id="eightirradiations" onclick="selectirradiations(this)">100本 (60分)</button>
-                <button type="button" id="nineirradiations" onclick="selectirradiations(this)">120本 (90分)</button>
-                <button type="button" id="tenirradiations" onclick="selectirradiations(this)">付け放題 (90分)</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)">ボリューム80本 (60分)</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)">ボリューム100本 (60分)</button>
+                <button type="button" id="nineirradiations" onclick="selectirradiations(this)">ボリューム120本 (90分)</button>
+                <button type="button" id="tenirradiations" onclick="selectirradiations(this)">ボリューム付け放題 (90分)</button>
             </div>
 
             <label id="baindLabel"></label>
             <div id="baindButtons" class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)">80本 (90分)</button>
-                <button type="button" id="tuirradiations" onclick="selectirradiations(this)">100本 (90分)</button>
-                <button type="button" id="suriirradiations" onclick="selectirradiations(this)">120本 (120分)</button>
-                <button type="button" id="foirradiations" onclick="selectirradiations(this)">160本 (120分)</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)">バインド80本 (90分)</button>
+                <button type="button" id="tuirradiations" onclick="selectirradiations(this)">バインド100本 (90分)</button>
+                <button type="button" id="suriirradiations" onclick="selectirradiations(this)">バインド120本 (120分)</button>
+                <button type="button" id="foirradiations" onclick="selectirradiations(this)">バインド160本 (120分)</button>
             </div>
         </div>
 
@@ -1297,11 +1301,11 @@
             } else if (treatmentId === 'treatment5') {
                 treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：120分</strong><br></div><div style="text-align: right;"><strong>料金：12,000円</strong></div>`;
             } else if (treatmentId === 'treatment6') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong></strong>80本 (60分)：6,500円<br>100本 (60分)：7,500円<br>120本 (90分)：8,000円<br>付け放題 (90分)：8,500円</div><div style="text-align: center;"><strong>以下の中からお選びください</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong></strong><div style="text-align: center;"><strong>↑の中からお選びください↑<strong></strong><br>80本 (60分)：6,500円<br>100本 (60分)：7,500円<br>120本 (90分)：8,000円<br>付け放題 (90分)：8,500円</div><div style="text-align: center;"></div>`;
             } else if (treatmentId === 'treatment7') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong></strong>80本 (60分)：6,500円<br>100本 (60分)：7,500円<br>120本 (90分)：8,000円<br>付け放題 (90分)：8,500円</div><div style="text-align: center;"><strong>以下の中からお選びください</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong></strong><div style="text-align: center;"><strong>↑の中からお選びください↑<strong></strong><br>80本 (60分)：6,500円<br>100本 (60分)：7,500円<br>120本 (90分)：8,000円<br>付け放題 (90分)：8,500円</div><div style="text-align: center;"></div>`;
             } else if (treatmentId === 'treatment8') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong></strong>80本 (90分)：8,000円<br>100本 (90分)：9,000円<br>120本 (120分)：10,000円<br>160本(120分)：12,000円</div><div style="text-align: center;"><strong>以下の中からお選びください<strong></strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong></strong><div style="text-align: center;"><strong>↑の中からお選びください↑<strong></strong><br>80本 (90分)：8,000円<br>100本 (90分)：9,000円<br>120本 (120分)：10,000円<br>160本(120分)：12,000円</div></div>`;
             } else if (treatmentId === 'treatment9') {
                 treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：45分</strong><br>※本数によって料金・時間に変動がございます</div><div style="text-align: right;"><strong>料金：2,970円</strong></div>`;
             } else if (treatmentId === 'treatment10') {
@@ -1640,7 +1644,7 @@ const selectedSymptomText = formData.selectedSymptom
   : 'メニュー未選択';
 
 // irradiationsCountの整形（nullチェック）
-const irradiationsText = formData.irradiationsCount || 'なし';
+const irradiationsText = formData.irradiationsCount || '';
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
