--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         #treatment-text {
             font-family: "Helvetica Neue", "Segoe UI", Verdana, sans-serif;
             font-weight: 300;
-            background-color: #f7f7f7;
+            background-color: #f5d8cb;
             padding: 10px;
             border-radius: 4px;
             margin-top: 1px;
@@ -1040,7 +1040,7 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let visitCount = '';
-        let selectedMenu = '';
+        let selectedMenu = [];
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
@@ -1481,18 +1481,28 @@ function selectirradiations(button) {
     // 選択された日時をリセット
     selectedFullDate = '';
 
+    // 現在選択されているボタンを取得
+    const selectedButtons = document.querySelectorAll('.irradiations button.active');
+
+    // これから選択しようとしている場合、選択数を制限（3つまで）
+    const isSelecting = !button.classList.contains('active');
+    if (isSelecting && selectedButtons.length >= 3) {
+        alert('選択は最大3つまでです。');
+        return; // それ以上選択できない
+    }
+
     // ボタンの選択状態を切り替える
     button.classList.toggle('active');
 
     // 選択されたオプションを取得
-    const selectedButtons = document.querySelectorAll('.irradiations button.active');
-    const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
+    const updatedSelectedButtons = document.querySelectorAll('.irradiations button.active');
+    const selectedIrradiations = Array.from(updatedSelectedButtons).map(btn => btn.innerText);
     irradiationsCount = selectedIrradiations.join(', ');
 
     // すべてのオプションの価格を再計算
     optionsPrice = 0; // 全体をリセットして再計算
     let totalirradiationsTime = 0; // 選択されたすべてのオプションの合計時間
-    selectedButtons.forEach(btn => {
+    updatedSelectedButtons.forEach(btn => {
         const price = parseInt(btn.getAttribute('data-price'), 10);
         optionsPrice += price;
 
