--- a/index.html
+++ b/index.html
@@ -961,11 +961,10 @@
         <div class="highlight-background">
             <div class="kibounitizi">出産予定日 or 出産日<span class="required">必須</span></div>
         </div>
-           <div class="info-text">時刻の選択は不要です。</div>
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder4">⇩タップして日時を入力⇩</span>
-            <input type="datetime-local" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+            <input type="date" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
             <div class="labelContent">自然分娩 or 帝王切開</div>
@@ -974,7 +973,7 @@
                 <button type="button" onclick="selectCaesareansection(this)">帝王切開</button>
             </div>
 
-        <div class="label">お子様のお名前（決まっていれば）</div>
+        <div class="label">お子様のお名前<br>（決まっていれば）</div>
         <input type="text" id="mugwortsiblinginfo" placeholder="お子様のお名前を入力してください">
 
             <div class="label">お子様の性別<span class="required">必須</span></div>
@@ -1005,14 +1004,14 @@
             <div class="labelnigyou">撮影に参加される方の<br>人数と続柄（任意）</div>
             <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
-            <div class="labelnigyou">生花撮影ご希望の有無<span class="required">必須</span></div>
+            <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
             <div class="hairmakeup-buttons">
                 <button type="button" onclick="selecthairmakeup(this)">有り</button>
                 <button type="button" onclick="selecthairmakeup(this)">無し</button>
                 <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
             </div>
 
-            <div class="label">大人ヘアメイクご希望の有無<span class="required">必須</span></div>
+            <div class="label">大人ヘアメイク<span class="required">必須</span><br>ご希望の有無</div>
             <div class="preparationphoto-buttons">
                 <button type="button" onclick="selectpreparationphoto(this)">有り</button>
                 <button type="button" onclick="selectpreparationphoto(this)">無し</button>
