--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,9 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let visitCount = '';
+        let kibou1Count = '';
+        let kibou2Count = '';
+        let kibou3Count = '';
         let hairmakeupCount = '';
         let kimonoCount = '';
         let preparationphotoCount = '';
